app/src/main/java/com/example/fitnesstracker/presentation/auth/error/AuthError.java
package com.example.fitnesstracker.presentation.auth.error;

public sealed interface AuthError permits NotExistedUser, InvalidCredentials, Unknown { }

